fixed extra white space on bottom of main page

--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,11 @@ html {
   margin-top: 0;
   padding-top: 0;
   background-color: white;
-  height: 100%;
   width: 100%;
 }
 
 body {
   margin: 0;
-  padding: 0;
 }
 
 /******************** HOMEPAGE ********************/
@@ -390,12 +388,8 @@ nav ul li a {
   text-align: center;
   color: rgb(34, 33, 33);
   height: 200px;
-  margin-top: 100px;
-  margin-left: 50px;
-  margin-right: 50px;
-  padding-top: 50px;
-  padding-left: 25px;
-  padding-right: 25px;
+  margin: 100px 50px 0;
+  padding: 50px 25px 0;
 }
 
 .profile-pic {
@@ -410,6 +404,7 @@ nav ul li a {
 #contact {
   background-color: white;
   width: 100%;
+  height: 100%;
 }
 
 .fade-up {
@@ -444,20 +439,26 @@ nav ul li a {
   background-repeat: no-repeat;
   background-attachment: fixed;
   padding: 25px 0 0 25px;
+  height: 1000px;
 }
 
-.contact-content p {
+.contact-top {
   width: 75%;
-  margin: 60px auto;
+  /* margin: 250px auto 0px; */
   padding: 20px;
   font-family: glacial-indifference;
   font-size: 25px;
   color: white;
-  background-color: rgb(255, 22, 22);
-  border: 3px solid white;
+  background-color: rgb(34, 33, 33);
+  border: 5px double white;
   border-radius: 4px;
   opacity: 0.9;
   text-align: center;
+}
+
+.contact-content p a {
+  text-decoration: none;
+  color: rgb(255, 22, 22);
 }
 
 #contact-form {
@@ -466,8 +467,8 @@ nav ul li a {
   align-items: center;
   justify-content: center;
   padding: 35px;
-  margin-top: 75px;
-  margin-bottom: 60px;
+  /* margin-top: 55px; */
+  /* margin-bottom: 15px; */
   width: 350px;
   opacity: 0.9;
 }
@@ -524,19 +525,30 @@ textarea {
 }
 
 #social-media {
-  padding-bottom: 250px;
+  /* padding-bottom: 250px; */
 }
 
 .social-media-icons {
   text-align: center;
+  margin-bottom: 75px;
+}
+
+.social-media-icons a {
+  text-decoration: none;
 }
 
 .contact-paragraph {
   font-family: glacial-indifference;
   color: white;
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
   width: 400px;
+  padding: 20px;
+  margin-bottom: 65px;
+  background-color: rgb(34, 33, 33);
+  border: 5px double white;
+  border-radius: 4px;
+  opacity: 0.9;
 }
 
 #github-thumbnail {
@@ -564,17 +576,18 @@ textarea {
 /******************** FOOTER ********************/
 
 #home-footer {
-  background-color: white;
-  height: 50px;
+  background-color: rgb(233, 231, 231);
   width: 100%;
+  height: 50px;
 }
 
 #home-footer p {
   font-family: glacial-indifference;
-  font-size: 12px;
+  font-size: 15px;
+  line-height: 0;
   text-align: center;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 25px;
   color: rgb(34, 33, 33);
 }
 
